# tars-revoke

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  TARS_SOUL.md  apple_stt_test.py  file_stt.swift  get_models.py  mimo_apple_realtime_assistant.py  pyproject.toml  stt_test.swift  tars_appraisal.py  tars_budget.py  tars_build_control.py  tars_build_policies.py  tars_codex_sandbox.sb  tars_context_governor.py  tars_cron.py  tars_deepgram_tts_ws.py  tars_event_bus.py  tars_evolution.py  tars_gemini_runner.py  tars_inner_voice.py  tars_memory.py  tars_mind.py  tars_mind_metrics.py  tars_model_registry.py  tars_models.json  tars_patch_review.py  tars_proactive.py  tars_self.py  tars_self_model.py  tars_skills_loader.py  tars_sleep.py  tars_text_clean.py  tars_thought_gate.py  tars_vibevoice_speaker.py  (+8 more)
.github/workflows/: ci.yml
demo/billing-repo/: pyproject.toml
docs/: BUILD_CONTROL_PLANE.md  DEEPGRAM_STT_RESEARCH.md  DEEPGRAM_TTS_RUNTIME_RESEARCH.md  MIMO_TTS_EXPRESSIVE_RUNTIME.md  MIMO_TTS_RESEARCH.md  TARS_ARCHITECTURE_MAP.md  VIBEVOICE_RUNTIME_RESEARCH.md  architecture.md  evaluation.md
docs/revoke/: ARCHITECTURE.md  COMPLETION_MATRIX.md  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  QA_INVENTORY.md  RAW_MATERIAL_MAP.md  WHY_THIS_IS_NOT_A_MEMORY_GRAPH.md
examples/: runtime-state.example.md
scripts/: benchmark_inner_models.py  clean_self_model.py  dump_prompt.py  mind_report.py  probe_deepgram_tts.py  probe_mimo_tts.py  simulate_phase_2_5.py  smoke_desire_intake_to_build_job.py  smoke_gemma_inner_voice.py  smoke_memory_hygiene.py  smoke_phase_2_5R.py  smoke_phase_2_6B.py  smoke_self_model_hygiene.py  start_local_model.sh  start_mlx_server.py  tars_build_cli.py  voice_test.py  watch_thoughts.py
src/tars_revoke/: __init__.py  cli.py  clock.py  config.py  errors.py  ids.py
tars_vibevoice/: smoke_worker_protocol.py  worker.py
tars_vibevoice/voices/: README.md
tests/: conftest.py
tools/: check_release_archives.py  qualify_release.py
web/: DESIGN_SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  (+5 more)
(+120 files in other folders)
